# RCA_Project

./: .gitignore  Link to drive.txt  README.md  guide
Custom_Robot_Controller/: CMakeLists.txt  HoughDataImages.csv  main.cpp
Custom_Robot_Controller/CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  houghData.csv  robot_control
Custom_Robot_Controller/TEST/: distanceData.csv  gzserver_manager.cpp  gzserver_manager_fuzzy.cpp  houghData.csv  plotCSV.py  plotCSV_distance.py
Custom_Robot_Controller/include/: GazeboFunctions.hpp  GlobalVars.hpp
Custom_Robot_Controller/scr/: Particle.hpp  ParticleFilter.hpp  cv.cpp  cv.hpp  deadReckoning.cpp  deadReckoning.hpp  fuzzyController.cpp  keyboardControl.cpp  main.cpp  testFuzzy.hpp  testHough.hpp  trackPos.cpp  trackPos.hpp
Figures/: CV_focalLength.ai  Hough illustration.m  fuzzyStarts.ai  fuzzysets.ai
Fuzzy sets/: Fuzzy sets.xlsx
Gazebo/: smallworld1.world
Gazebo/bigTestWorlds/: .bigworldNoMarbles3.world.swp  bigworldNoMarbles.world  bigworldNoMarbles0.world  bigworldNoMarbles1.world  bigworldNoMarbles1.world.save  bigworldNoMarbles2.world  bigworldNoMarbles3.world
Gazebo/smallTestWorlds/: smallworld0.world  smallworld10.world  smallworld11.world  smallworld12.world  smallworld13.world  (+13 more)
Notes/: AI_fuzzyTest.txt  Bugs.xlsx  CV_getEnv.txt  Marble_color.txt
OLD_TRAPE/CMake/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl
Plot of Q-learning tests/: flat_points.csv  plotCSV_plane.py  plotCSV_wire.py  test_AlphaGammaReward3.csv
(+20 files in other folders)
